--- a/count_min_sketch.ipynb
+++ b/count_min_sketch.ipynb
@@ -5,7 +5,19 @@
    "execution_count": 3,
    "id": "c50f811f-33ed-4b48-8949-79b69b33ca33",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'countminsketch'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [3], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msys\u001b[39;00m\n\u001b[1;32m     11\u001b[0m sys\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mappend(\u001b[39m'\u001b[39m\u001b[39m./CountMinSketch/\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m---> 13\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcountminsketch\u001b[39;00m \u001b[39mimport\u001b[39;00m CountMinSketch\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'countminsketch'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -25,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "615f6898-9b52-4244-81de-c2289d070901",
    "metadata": {},
    "outputs": [],
@@ -91,21 +103,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1416ee5f-3641-4f2e-bf5b-3c337e8cb6de",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "id": "58a1de1b-d348-4c4e-9f09-2a7526838ebd",
    "metadata": {},
    "outputs": [],
    "source": [
     "DEPTH = 7\n",
-    "# WIDTH = 2**22\n",
     "WIDTH = 5\n",
     "HASH_FUNCTIONS = [hash_function(i) for i in range(DEPTH)]"
    ]
@@ -131,6 +134,8 @@
     }
    ],
    "source": [
+    "# produce random hashmap\n",
+    "\n",
     "hash_map = []\n",
     "for i in range(len(HASH_FUNCTIONS)):\n",
     "    list_=[]\n",
@@ -138,17 +143,30 @@
     "        list_.append(HASH_FUNCTIONS[i](j)%WIDTH)\n",
     "        print(HASH_FUNCTIONS[i](j)%WIDTH, end=' ')\n",
     "    hash_map.append(list_)\n",
-    "    print()"
+    "\n",
+    "hash_map =np.array(hash_map).T\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "34e7f6b7-e6e6-41d3-8e4c-f6841f42a424",
+   "execution_count": null,
+   "id": "8e0f9e76",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hash_map =np.array(hash_map).T"
+    "def countminsketch(data):\n",
+    "    batch = Counter()\n",
+    "    sketch = CountMinSketch(DEPTH, WIDTH, HASH_FUNCTIONS)\n",
+    "\n",
+    "    for tid in data:\n",
+    "        timestamp = find_tweet_timestamp_post_snowflake(tid)\n",
+    "        current_date = datetime.datetime.fromtimestamp(timestamp/1000)\n",
+    "        batch[current_date.hour]+=1\n",
+    "        for key, count in batch.items():\n",
+    "            sketch.add(key, count)\n",
+    "        batch.clear()\n",
+    "\n",
+    "    return min([sketch.get_matrix()[idx][j] for idx, j in enumerate(hash_map[0])])\n"
    ]
   },
   {
@@ -186,27 +204,6 @@
     "    \n",
     "    # if idx==100:\n",
     "    #     break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "73025478-70ce-459f-b3b8-da713b32a700",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "idx"
    ]
   },
   {
@@ -361,7 +358,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.15 ('kafka')",
    "language": "python",
    "name": "python3"
   },
@@ -375,7 +372,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.8.15"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "07f5098c0d20b8b9fdc9295daf67ce3b35bdd63b4a3860409532bf0e808a3e96"
+   }
   }
  },
  "nbformat": 4,
