--- a/1202_countminsketch.ipynb
+++ b/1202_countminsketch.ipynb
@@ -83,14 +83,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "35db41a0-6e2f-4626-abe9-5cef0173e2e4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "id": "cd8981f3-0677-4373-99cd-c04a56bb71eb",
    "metadata": {},
@@ -396,7 +388,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.0 ('torch')",
    "language": "python",
    "name": "python3"
   },
@@ -410,7 +402,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.8.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "5c94642f67e4fdd9b1399aa8ccb3ca48a8a2765c246252a4f3d1cf9641cb9504"
+   }
   }
  },
  "nbformat": 4,
